--- a/.github/workflows/main_airportstatistics.yml
+++ b/.github/workflows/main_airportstatistics.yml
@@ -27,6 +27,8 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+        env:
+          CI: ""
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
