--- a/.github/workflows/main_airportstatistics.yml
+++ b/.github/workflows/main_airportstatistics.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: ./client/release.zip
 
   deploy:
     runs-on: ubuntu-latest
