--- a/.github/workflows/main_airportstatistics.yml
+++ b/.github/workflows/main_airportstatistics.yml
@@ -36,6 +36,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
+          path: release.zip
         
   deploy:
     runs-on: ubuntu-latest
