--- a/.github/workflows/main_airportstatistics.yml
+++ b/.github/workflows/main_airportstatistics.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           cd client
           npm install
+          rm -rf node_modules/
           npm run build --if-present
           # npm run test --if-present
         env:
