--- a/.github/workflows/main_airportstatistics.yml
+++ b/.github/workflows/main_airportstatistics.yml
@@ -26,7 +26,7 @@ jobs:
           npm install
 
           npm run build --if-present
-          rm -rf node_modules/
+          # rm -rf node_modules/
           # npm run test --if-present
         env:
           CI: ""
