--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dotenv": "^0.1.3",
     "react-scripts": "5.0.1",
     "realm-web": "^2.0.0",
+    "recharts": "^2.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
