--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-browserify": "^3.12.0",
     "evergreen-ui": "^7.1.9",
     "formik": "^2.4.5",
     "i": "^0.3.7",
@@ -18,7 +19,9 @@
     "react-scripts": "5.0.1",
     "realm-web": "^2.0.0",
     "recharts": "^2.10.1",
-    "web-vitals": "^2.1.4"
+    "stream": "^0.0.2",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.89.0"
   },
   "scripts": {
     "start": "react-scripts start",
